@@ -27,6 +27,8 @@ Version 1.6.2
        was activated resulted in an invalid file. (Stefan)
 - BUG: interactive merging of binary files always left the file conflicted,
        ignoring the "Use local" and/or "Use repository" buttons. (Stefan)
+- BUG: TSVN didn't work on Win2k if it wasn't fully updated and
+       IE6 installed. (Stefan)
 
 Version 1.6.1
 - CHG: The history dialog is now 'attached' to the commit dialog. (Stefan)
